# launcher

./: .gitignore  .tern-project  README.md  config.toml  index.css  index.html  package-lock.json  package.json
app/: index.css  index.html
app/js/: app.mjs  paths.mjs
app/js/launcher/: launcher.mjs  manifest.mjs
js/: app.mjs  paths.mjs  util.mjs
js/config/: config.mjs
js/launcher/: launcher.mjs  manifest.mjs  mojang_meta.mjs
js/modrinth/: modrinth.mjs
js/util/: util.mjs
src-tauri/: Cargo.toml  config.toml  default-config.toml  foo.txt  tauri.conf.json
src-tauri/$HOME/.local/share/AxolotlClient/instances/fabulously-optimized/1.19.2/: options.txt
src-tauri/config/: lambdynlights.toml  rrp.properties
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  util.rs
src-tauri/src/minecraft/: auth.rs  java.rs  launcher.rs  mod.rs  modpack.rs  mojang_meta.rs
